# bitris-commands

./: Cargo.toml
src/: bit_shapes.rs  clipped_board.rs  patterns.rs  shape_counter.rs  shape_order.rs  shape_sequence.rs
src/internals/: fuzzy_shape.rs  fuzzy_shape_order.rs
src/pc_possible/: bulk_executor.rs
