[package]
name = "bitris_commands"
version = "0.1.0"
edition = "2021"
authors = ["knewjade"]

[dependencies]
bitris = { git = "https://github.com/minus3theta/bitris.git", rev = "dc9e62d0fbb0b8b52b7a322696cb5728e8fc76f2" }
itertools = "0.10.5"
bitvec = "1.0.1"
fxhash = "0.2.1"
tap = "1.0.1"
derive_more = "0.99.17"
thiserror = "1.0.38"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[lib]
bench = false

#[profile.test]
#opt-level = 3
#debug = false

[[bench]]
name = "pc_possible"
harness = false
